err/jasper.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jasper-0.1.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/colorama'...
Listing './lib/python3.5/site-packages/colorama-0.3.7.dist-info'...
Listing './lib/python3.5/site-packages/jasper'...
Compiling './lib/python3.5/site-packages/jasper/context.py'...
***   File "./lib/python3.5/site-packages/jasper/context.py", line 31
    raise AttributeError(f'{item} not in Context.')
                                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jasper/display.py'...
***   File "./lib/python3.5/site-packages/jasper/display.py", line 122
    self.__push_to_display(color(f'Feature: {feature.description}'))
                                                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jasper/exceptions.py'...
***   File "./lib/python3.5/site-packages/jasper/exceptions.py", line 24
    return f'FAILURE: Expected {self.actual} {self.operator} {self.expected}'
                                                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jasper/feature.py'...
***   File "./lib/python3.5/site-packages/jasper/feature.py", line 45
    raise ValidationException(f'\n\nFeature \'{self.description}\'. '
                                                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jasper/scenario.py'...
***   File "./lib/python3.5/site-packages/jasper/scenario.py", line 57
    raise ValidationException(f'\n\nScenario \'{self.description}\'. '
                                                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jasper/suite.py'...
***   File "./lib/python3.5/site-packages/jasper/suite.py", line 77
    desc=f'Running {len(self.features)} features and '
                                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/termcolor-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/tqdm'...
Listing './lib/python3.5/site-packages/tqdm-4.11.2.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
